--- a/elements.html
+++ b/elements.html
@@ -32,7 +32,7 @@
 <body>
     <div class="header">
         <div id="site_title">
-            <a href="index.html"><img src="img/logo.png" alt=""></a>
+            <a href="index.html"><img src="img/logo222.png" alt=""></a>
         </div>
         <!-- Main Menu -->
         <ol id="menu">
